--- a/.github/workflows/v3.yaml
+++ b/.github/workflows/v3.yaml
@@ -1,5 +1,9 @@
 - name: Checkout
   uses: actions/checkout@v2.6.0
+    with:
+      path: src
 
 - name: Upload a Build Artifact
   uses: actions/upload-artifact@v3.1.1
+    with:
+      path: src
