--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,14 +12,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2.6.0
+    - name: Checkout
+      uses: actions/checkout@v2.6.0
 
     - name: Package Application
-      uses: JackMcKew/pyinstaller-action-windows@main
+      uses: JackMcKew/JackMcKew/pyinstaller-action-windows@v0.1.2
       with:
         path: src
-
-    - uses: actions/upload-artifact@v3.1.1
+        
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3.1.1
       with:
-        name: name-of-artifact
+        name: csquiz
         path: src/dist/windows
