--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,9 +12,10 @@ jobs:
       uses: actions/checkout@v2.6.0
 
     - name: Package Application
-      uses: JackMcKew/JackMcKew/pyinstaller-action-windows@v0.1.2
+      uses: JackMcKew/JackMcKew/pyinstaller-action-windows@main
       with:
-        path: src
+        spec: main.spec
+      
         
     - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.1
